2022-05-18 Felix Salfelder <felix AT salfelder.org>

	* support/sdbinutils:
	  Merge upstream GNU Binutils 2.38 (feature request #766).
	* support/regression/Makefile.in:
	  clean-results rule

2022-05-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/setjmp.c,
	  support/regression/tests/loop.c.in:
	  Disable two tests for FreeBSD 13.1, since a known issue from FreeBSD 13.0 is still present.
	* support/regression/MakeList:
	  Disable a test for targets that cannot complete it within reasonable time.
	* support/regression/tests/bug-3385.c:
	  Disable new test for mos6502, where it fails (bug #3386).
	* support/regression/tests/gcc-torture-execute-20040409-?.c:
	  Disable parts of tests that test for GCC implementation-defined behaviour.
	* support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_1_xy.c,
	  support/regression/tests/mm-pnvi-ae-udi-provenance_basic_using_uintptr_t_auto_yx.c,
	  support/regression/tests/mm-pnvi-ae-udi-provenance_basic_using_uintptr_t_global_xy.c:
	  Disable tests for clang 13 that fail there due to clang 13 TS 6010 Provenance non-compliance.

2022-05-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge regtest branch.

2022-05-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCval.c,
	  src/SDCCast.c:
	  support/regression/tests/bug-3391.c:
	  Fix bug #3391.

2022-05-16 Felix Salfelder <felix AT salfelder.org>

	* support/regression/Makefile.in:
	  avoid various newline compound echo arguments.

2022-05-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug #3388.
	* src/SDCCsymt.c,
	  support/valdiag/tests/bug-3389.c:
	  device/include/float.h,
	  support/regression/tests/bug-1805702.c:
	  Fix bug #3389.

2022-05-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-3385.c:
	  Disable new test for hc08 and s08, where it fails (bug #3386).
